cov/tests/test262/test/language/identifiers/vals-eng-alpha-lower-via-escape-hex/code.js
"use strict";
// Copyright (C) 2017 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Collection of assertion functions used throughout test262
defines: [assert]
---*/


function assert(mustBeTrue, message) {
  if (mustBeTrue === true) {
    return;
  }

  if (message === undefined) {
    message = 'Expected true but got ' + assert._toString(mustBeTrue);
  }
  throw new Test262Error(message);
}

assert._isSameValue = function (a, b) {
  if (a === b) {
    // Handle +/-0 vs. -/+0
    return a !== 0 || 1 / a === 1 / b;
  }

  // Handle NaN vs. NaN
  return a !== a && b !== b;
};

assert.sameValue = function (actual, expected, message) {
  try {
    if (assert._isSameValue(actual, expected)) {
      return;
    }
  } catch (error) {
    throw new Test262Error(message + ' (_isSameValue operation threw) ' + error);
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(expected) + '») to be true';

  throw new Test262Error(message);
};

assert.notSameValue = function (actual, unexpected, message) {
  if (!assert._isSameValue(actual, unexpected)) {
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(unexpected) + '») to be false';

  throw new Test262Error(message);
};

assert.throws = function (expectedErrorConstructor, func, message) {
  var expectedName, actualName;
  if (typeof func !== "function") {
    throw new Test262Error('assert.throws requires two arguments: the error constructor ' +
      'and a function to run');
    return;
  }
  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  try {
    func();
  } catch (thrown) {
    if (typeof thrown !== 'object' || thrown === null) {
      message += 'Thrown value was not an object!';
      throw new Test262Error(message);
    } else if (thrown.constructor !== expectedErrorConstructor) {
      expectedName = expectedErrorConstructor.name;
      actualName = thrown.constructor.name;
      if (expectedName === actualName) {
        message += 'Expected a ' + expectedName + ' but got a different error constructor with the same name';
      } else {
        message += 'Expected a ' + expectedName + ' but got a ' + actualName;
      }
      throw new Test262Error(message);
    }
    return;
  }

  message += 'Expected a ' + expectedErrorConstructor.name + ' to be thrown but no exception was thrown at all';
  throw new Test262Error(message);
};

assert._toString = function (value) {
  try {
    if (value === 0 && 1 / value === -Infinity) {
      return '-0';
    }

    return String(value);
  } catch (err) {
    if (err.name === 'TypeError') {
      return Object.prototype.toString.call(value);
    }

    throw err;
  }
};

// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Provides both:

    - An error class to avoid false positives when testing for thrown exceptions
    - A function to explicitly throw an exception using the Test262Error class
defines: [Test262Error, $DONOTEVALUATE]
---*/


function Test262Error(message) {
  this.message = message || "";
}

Test262Error.prototype.toString = function () {
  return "Test262Error: " + this.message;
};

Test262Error.thrower = (message) => {
  throw new Test262Error(message);
};

function $DONOTEVALUATE() {
  throw "Test262: This statement should not be evaluated.";
}

// Copyright (C) 2015 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: Correct interpretation of ENGLISH ALPHABET
es6id: 11.6
description: Check ENGLISH SMALL ALPHABET
---*/

var \u{61} = 1;
assert.sameValue(a, 1);

var \u{62} = 1;
assert.sameValue(b, 1);

var \u{63} = 1;
assert.sameValue(c, 1);

var \u{64} = 1;
assert.sameValue(d, 1);

var \u{65} = 1;
assert.sameValue(e, 1);

var \u{66} = 1;
assert.sameValue(f, 1);

var \u{67} = 1;
assert.sameValue(g, 1);

var \u{68} = 1;
assert.sameValue(h, 1);

var \u{69} = 1;
assert.sameValue(i, 1);

var \u{6A} = 1;
assert.sameValue(j, 1);

var \u{6B} = 1;
assert.sameValue(k, 1);

var \u{6C} = 1;
assert.sameValue(l, 1);

var \u{6D} = 1;
assert.sameValue(m, 1);

var \u{6E} = 1;
assert.sameValue(n, 1);

var \u{6F} = 1;
assert.sameValue(o, 1);

var \u{70} = 1;
assert.sameValue(p, 1);

var \u{71} = 1;
assert.sameValue(q, 1);

var \u{72} = 1;
assert.sameValue(r, 1);

var \u{73} = 1;
assert.sameValue(s, 1);

var \u{74} = 1;
assert.sameValue(t, 1);

var \u{75} = 1;
assert.sameValue(u, 1);

var \u{76} = 1;
assert.sameValue(v, 1);

var \u{77} = 1;
assert.sameValue(w, 1);

var \u{78} = 1;
assert.sameValue(x, 1);

var \u{79} = 1;
assert.sameValue(y, 1);

var \u{7A} = 1;
assert.sameValue(z, 1);

